# easy-mes

./: .gitignore  README.md  SKILL.md  docker-compose.prod.yml  docker-compose.yml  mes-business-flows.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_core_tables.py  0002_operation_execution_fields.py  0003_production_receipts.py  0004_quality_records.py  0005_user_accounts.py  0006_operation_assignment_fields.py  0007_clock_time_anomaly_fields.py  0008_auth_revocation_and_runtime_indexes.py  0009_worker_operation_skills.py  0010_clock_backfill_requests.py  0011_erp_work_order_feedbacks.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  defaults.py  logging.py  request_context.py  security.py
backend/app/db/: session.py
backend/app/middleware/: request_context.py
backend/app/models/: __init__.py  auth.py  base.py  master_data.py  production.py
backend/app/schemas/: __init__.py  auth.py  common.py  dashboard.py  integration.py  master_data.py  operation.py  quality.py  report.py  work_order.py
backend/app/scripts/: __init__.py  cleanup_expired_runtime_data.py  seed_demo.py  smoke_check.py
backend/app/services/: __init__.py  audit.py  auth.py  erp_integration.py  operation.py  quality.py  work_order.py  (+1 more)
backend/tests/: test_audit.py  test_auth.py  test_erp_integration.py  test_health.py  test_main_flow.py  test_request_context.py  test_seed_demo.py  test_work_order_import.py  test_work_order_status.py
(+50 files in other folders)
